--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3393,7 +3393,7 @@ input, select, textarea {
 		position: relative;
 		top: -3.25em;
 	}
-
+/*主页头图参数*/
 		#banner:after {
 			-moz-transition: opacity 2.5s ease;
 			-webkit-transition: opacity 2.5s ease;
@@ -3404,7 +3404,7 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			pointer-events: none;
-			background-color: #242943;
+			background-color: #202642bb;
 			content: '';
 			display: block;
 			height: 100%;
